[package]
name = "youtube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rusty_ytdl = { version = "0", features = ["search"] }
sanitize-filename = "0.5.0"
clap = { version = "4.4.11", features = ["derive"] }
